name:                twitter-bot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/twitter-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, OAuth, TwitterPipes, Twitter
  build-depends:       base >= 4.7 && < 5
                     , exceptions
                     , pipes
                     , pipes-bytestring
                     , pipes-http
                     , pipes-aeson
                     , pipes-parse
                     , authenticate-oauth
                     , http-client-tls
                     , http-client
                     , transformers
                     , bytestring
                     , twitter-types
                     , mtl
                     , aeson
                     , free
                     , text
  default-language:    Haskell2010
  ghc-options: -Wall

executable twitter-bot-exe
  hs-source-dirs:      src/main
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , twitter-bot
                     , http-client
                     , http-client-tls
                     , mtl
                     , configurator
  default-language:    Haskell2010

test-suite twitter-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/test
  main-is:             Spec.hs
  build-depends:       base
                     , twitter-bot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/twitter-bot
